@@ -117,6 +117,15 @@ specifier|final
 name|FragmentsBuilder
 name|fragmentsBuilder
 decl_stmt|;
+DECL|field|phraseLimit
+specifier|private
+name|int
+name|phraseLimit
+init|=
+name|Integer
+operator|.
+name|MAX_VALUE
+decl_stmt|;
 comment|/**    * the default constructor.    */
 DECL|method|FastVectorHighlighter
 specifier|public
@@ -569,6 +578,8 @@ argument_list|(
 name|fieldTermStack
 argument_list|,
 name|fieldQuery
+argument_list|,
+name|phraseLimit
 argument_list|)
 decl_stmt|;
 return|return
@@ -603,6 +614,34 @@ block|{
 return|return
 name|fieldMatch
 return|;
+block|}
+comment|/**    * @return the maximum number of phrases to analyze when searching for the highest-scoring phrase.    */
+DECL|method|getPhraseLimit
+specifier|public
+name|int
+name|getPhraseLimit
+parameter_list|()
+block|{
+return|return
+name|phraseLimit
+return|;
+block|}
+comment|/**    * set the maximum number of phrases to analyze when searching for the highest-scoring phrase.    * The default is 5000.  To ensure that all phrases are analyzed, use a negative number or Integer.MAX_VALUE.    */
+DECL|method|setPhraseLimit
+specifier|public
+name|void
+name|setPhraseLimit
+parameter_list|(
+name|int
+name|phraseLimit
+parameter_list|)
+block|{
+name|this
+operator|.
+name|phraseLimit
+operator|=
+name|phraseLimit
+expr_stmt|;
 block|}
 block|}
 end_class
