@@ -1945,6 +1945,24 @@ literal|false
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|fvh
+operator|.
+name|setPhraseLimit
+argument_list|(
+name|params
+operator|.
+name|getInt
+argument_list|(
+name|HighlightParams
+operator|.
+name|PHRASE_LIMIT
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|FieldQuery
 name|fieldQuery
 init|=
